Improved tag vacancy logic